<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:id="@id/header" android:background="@drawable/header_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Tel_name" android:singleLine="true" style="@style/headertextstyle" />
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_above="@id/tablefooter" android:layout_below="@id/header">
        <TableRow android:gravity="center" android:id="@id/tableRow2" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:id="@id/Tel_songs" android:background="@drawable/name_selector1" android:padding="10.0dip" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/telugu_songs" android:layout_weight="1.0" />
        </TableRow>
        <TableRow android:gravity="center" android:id="@id/tableRow3" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <EditText android:id="@id/enter_telugu" android:background="@color/background_material_light" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/enter" android:singleLine="true" android:maxLength="3" android:layout_weight="0.8" android:inputType="number" />
            <ImageView android:id="@id/btn_telugu" android:background="@drawable/buttonselector" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/search" android:scaleType="center" android:layout_weight="0.2" />
        </TableRow>
        <TextView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.3" />
        <TableRow android:gravity="center" android:id="@id/tableRow4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/black" android:gravity="center" android:id="@id/eng_songs" android:background="@drawable/name_selector1" android:padding="10.0dip" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/english_songs" android:layout_weight="1.0" />
            <TextView android:background="@color/background" android:layout_width="2.0dip" android:layout_height="fill_parent" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/black" android:gravity="center" android:id="@id/eng_chorus" android:background="@drawable/name_selector1" android:padding="10.0dip" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/english_chorus" android:layout_weight="1.0" />
        </TableRow>
        <TableRow android:gravity="center" android:id="@id/tableRow5" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <EditText android:id="@id/enter_eng" android:background="@color/background_material_light" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/enter" android:singleLine="true" android:maxLength="3" android:layout_weight="1.0" android:inputType="number" />
            <ImageView android:id="@id/btn_eng" android:background="@drawable/buttonselector" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/search" android:scaleType="center" android:layout_weight="0.5" />
            <TextView android:id="@id/textView3" android:background="@color/background" android:layout_width="2.0dip" android:layout_height="fill_parent" />
            <EditText android:id="@id/enter_eng_chorus" android:background="@color/background_material_light" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/enter" android:singleLine="true" android:maxLength="3" android:layout_weight="1.0" android:inputType="number" />
            <ImageView android:id="@id/btn_eng_chorus" android:background="@drawable/buttonselector" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/search" android:scaleType="center" android:layout_weight="0.5" />
        </TableRow>
    </LinearLayout>
    <TableRow android:id="@id/tablefooter" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_alignParentBottom="true">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:id="@id/footer" android:background="@drawable/header_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Eng_name" style="@style/headertextstyle" />
    </TableRow>
</RelativeLayout>
